# meshwork

./: .gitignore  AUTHORS  BuildWindowsInstaller.bat  INSTALL  Makefile.am  Meshwork.nsi  Meshwork.sln  README  README.md  autogen.sh  configure.ac  index.html  meshwork-gtk.pc.in  meshwork.desktop  meshwork.in  meshwork.pc.in  version.sh
contrib/: Makefile.am  MonoTorrent.dll.mdb
contrib/dotnet/: add.reg  install.bat
contrib/osx/: libgtkmacintegration-gtk2.2.dylib  libigemacintegration.dylib
plugins/Debug/: Debug.csproj  DebugActionGroup.cs  DebugPlugin.cs  DebugWindow.cs  Makefile.am
resources/: Makefile.am
resources/glade/: meshwork.glade
resources/ui/: MainWindow.xml  MapPopupMenu.xml
src/FileFind.Meshwork/: AckMethod.cs  AssemblyInfo.cs  AutoconnectManager.cs  ChatRoom.cs  ConnectionState.cs  ConnectionType.cs  Core.cs  DataConverter.cs  DebugInfo.cs  Encryption.cs  EndianBitConverter.cs  Errors.cs  EventArgs.cs  Exceptions.cs  FileFind.Meshwork.csproj  FileTypeQueryValue.cs  IAvatarManager.cs  IMeshworkPlugin.cs  INodeConnection.cs  IPlatform.cs  ISettings.cs  KeyFunctions.cs  Linux.cs  LocalNodeConnection.cs  LogManager.cs  LoggingService.cs  Makefile.am  Memo.cs  Message.cs  MessageBuilder.cs  MessageProcessor.cs  NearbyNode.cs  Network.cs  NetworkInfo.cs  NetworkState.cs  Node.cs  OSX.cs  Object.cs  PluginInfo.cs  PublicKey.cs  (+8 more)
src/FileFind.Meshwork.DaemonClient/: AvatarManager.cs  FileFind.Meshwork.DaemonClient.csproj  Makefile.am  MeshworkDaemon.cs  Settings.cs  SettingsCreator.cs  foo.xml  meshwork.pid  project.json  project.lock.json  shares.db
src/FileFind.Meshwork.GtkClient/: AssemblyInfo.cs  AvatarManager.cs  BuiltinActionGroup.cs  Defines.cs.in  DispatchService.cs  DndUtils.cs  DrawingUtilities.cs  FileFind.Meshwork.GtkClient.csproj  FileFind.Meshwork.GtkClient.exe.config  GtkHelper.cs  GtkMeshworkOptions.cs  Gui.cs  GuiSyncContext.cs  Makefile.am  RunOnMainThread.cs  Runtime.cs  Settings.cs  SyncContext.cs  TrayIcon.cs
src/FileFind.Meshwork.GtkClient/Menus/: ChatMenu.cs  ChatPageMenu.cs  ConnectionMenu.cs  MapMenu.cs  MemoMenu.cs  TransfersMenu.cs  UserMenu.cs
src/FileFind.Meshwork.GtkClient/Pages/: ChatRoomSubpage.cs  ChatSubpageBase.cs  ChatsPage.cs  ConnectionsPage.cs  IPage.cs  MemosPage.cs  NetworkOverviewPage.UserList.cs  NetworkOverviewPage.cs  NewSearchPage.cs  PrivateChatSubpage.cs  SearchResultsPage.cs  StatusLogPage.cs  TransfersPage.cs  UserBrowserPage.cs
src/FileFind.Meshwork.GtkClient/SidebarItems/: ChatsItem.cs  ConnectionsItem.cs  FileSearchItem.cs  ISidebarItem.cs  MemosItem.cs  NetworkOverviewItem.cs  NewSearchItem.cs  SeparatorItem.cs  StatusItem.cs  TransfersItem.cs  UserBrowserItem.cs  WhatsNewSearchItem.cs  WhatsPopularSearchItem.cs
src/FileFind.Meshwork.GtkClient/Widgets/: Actor.cs  AnimatedImage.cs  ExpanderBar.cs  FadingAlignment.cs  FileSearchEntry.cs  FileSelector.cs  FilterWidget.cs  FolderDialog.cs  GladeWidgetExtract.cs  Header.cs  HoverImageButton.cs  MainSidebar.cs  NavigationBar.cs  NetworkGroupedTreeStore.cs  SearchEntry.cs  SingleActorStage.cs  Stage.cs  ZoomableCairoArea.cs  ZoomableNetworkMap.cs
src/FileFind.Meshwork.GtkClient/Windows/: AboutDialog.cs  AcceptKeyDialog.cs  AddNetworkDialog.cs  AddTrustedNodeDialog.cs  BadOptionsDialog.cs  ChangeKeyPasswordDialog.cs  ChatRoomInvitationDialog.cs  ChatRoomPasswordDialog.cs  ChildWindow.cs  ConnectDialog.cs  DownloadPublicKeyDialog.cs  EditMemoDialog.cs  EditNetworkDialog.cs  FilePropertiesWindow.cs  FileTransferWindow.cs  GenerateKeyDialog.cs  GladeDialog.cs  GladeWindow.cs  IndexingStatusWindow.cs  InviteToChatDialog.cs  JoinChatroomDialog.cs  MainWindow.cs  MemoWindow.cs  PreferencesDialog.cs  SelectAvatarDialog.cs  SplashWindow.cs  StartupProblemsDialog.cs  UnlockKeyDialog.cs  UserInfoDialog.cs  winAcceptKey.cs  winAddTrustedNode.cs  winBadOptions.cs  winDownloadPublicKey.cs  winEditTrustedNode.cs  winJoinChat.cs  winSplash.cs  winViewMemo.cs
src/FileFind.Meshwork/Classless.Hasher/: CRC.cs  CRCParameters.cs  CRCStandard.cs  HashAlgorithmParameters.cs
src/FileFind.Meshwork/FileFind.Meshwork.Collections/: MessageIdCollection.cs  NodeConnectionCollection.cs
src/FileFind.Meshwork/FileFind.Meshwork.Destination/: DestinationManager.cs  IDestination.cs  IPDestination.cs  TCPDestination.cs
src/FileFind.Meshwork/FileFind.Meshwork.FileTransfer/: FileTransferBase.cs  FileTransferDirection.cs  FileTransferManager.cs  FileTransferPeerBase.cs  FileTransferPeerStatus.cs  FileTransferStatus.cs  IFileTransfer.cs  IFileTransferPeer.cs  IFileTransferProvider.cs
src/FileFind.Meshwork/FileFind.Meshwork.FileTransfer.BitTorrent/: BitTorrentFileTransfer.cs  BitTorrentFileTransferPeer.cs  BitTorrentFileTransferProvider.cs  MeshworkPeerConnection.cs  MeshworkPeerConnectionListener.cs  MeshworkTrackerClient.cs
src/FileFind.Meshwork/FileFind.Meshwork.Filesystem/: AbstractDirectory.cs  AbstractFile.cs  Directory.cs  File.cs  FileSystemProvider.cs  IDirectory.cs  IDirectoryItem.cs  IFile.cs  ILocalDirectoryItem.cs  IRemoteDirectoryItem.cs  LocalDirectory.cs  LocalFile.cs  MyDirectory.cs  NetworkDirectory.cs  NodeDirectory.cs  PathUtil.cs  RemoteDirectory.cs  RemoteFile.cs  RootDirectory.cs
src/FileFind.Meshwork/FileFind.Meshwork.Logging/: ConsoleCrayon.cs  ConsoleLogger.cs  FileLogger.cs  ILogger.cs  LogLevel.cs
src/FileFind.Meshwork/FileFind.Meshwork.Protocol/: MemoInfo.cs  MessageContentClasses.cs
src/FileFind.Meshwork/FileFind.Meshwork.Search/: FileSearch.cs  FileSearchFilter.cs  FileSearchGroup.cs  FileSearchManager.cs  ISearchResult.cs  SearchResult.cs
src/FileFind.Meshwork/FileFind.Meshwork.Transport/: AESTransportEncryptor.cs  IMeshworkOperation.cs  ITransport.cs  ITransportEncryptor.cs  ITransportListener.cs  OverlayTransport.cs  TcpListener.cs  TcpTransport.cs  TransportBase.cs  TransportManager.cs  TransportState.cs  UdpTransport.cs
src/FileFind.Meshwork/FileFind.Stun/: AddressAttributeBase.cs  ChangeRequestAttribute.cs  MappedAddressAttribute.cs  MessageAttribute.cs  MessageHeader.cs  MessageType.cs  SourceAddressAttribute.cs  StunClient.cs  Utility.cs
(+352 files in other folders)
