BINDIR=$(top_builddir)/build

DIFFIEHELLMAN_DLL=DiffieHellman.dll
DIFFIEHELLMAN=$(BINDIR)/$(DIFFIEHELLMAN_DLL)

GTKSPELLSHARP_DLL=gtkspell-sharp.dll
GTKSPELLSHARP=$(BINDIR)/$(GTKSPELLSHARP_DLL)

STUN_DLL=FileFind.Stun.dll
STUN=$(BINDIR)/$(STUN_DLL)

MONOTORRENT_DLL=MonoTorrent.dll
MONOTORRENT=$(BINDIR)/$(MONOTORRENT_DLL)

MACINTEGRATION_DYLIB=libigemacintegration.dylib
MACINTEGRATION=$(BINDIR)/osx/$(MACINTEGRATION_DYLIB)

MACINTEGRATION_SHARP_DLL=ige-mac-integration-sharp.dll
MACINTEGRATION_SHARP=$(BINDIR)/$(MACINTEGRATION_SHARP_DLL)

all: $(DIFFIEHELLMAN) $(GTKSPELLSHARP) $(STUN) $(MONOTORRENT) $(MACINTEGRATION) $(MACINTEGRATION_SHARP)

$(DIFFIEHELLMAN):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(DIFFIEHELLMAN_DLL) $(DIFFIEHELLMAN)

$(STUN):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(STUN_DLL) $(STUN)

$(GTKSPELLSHARP):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(GTKSPELLSHARP_DLL) $(GTKSPELLSHARP)

$(MONOTORRENT):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(MONOTORRENT_DLL) $(MONOTORRENT)

$(MACINTEGRATION_SHARP):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(MACINTEGRATION_SHARP_DLL) $(MACINTEGRATION_SHARP)

$(MACINTEGRATION):
	mkdir -p $(BINDIR)/osx
	cp $(srcdir)/osx/$(MACINTEGRATION_DYLIB) $(MACINTEGRATION)

CLEANFILES = $(DIFFIEHELLMAN) $(GTKSPELLSHARP) $(STUN) $(MONOTORRENT) $(MACINTEGRATION) $(MACINTEGRATION_SHARP)
EXTRA_DIST = $(DIFFIEHELLMAN_DLL) $(GTKSPELLSHARP_DLL) $(STUN_DLL) $(MONOTORRENT_DLL) $(MACINTEGRATION_DYLIB) $(MACINTEGRATION_SHARP_DLL)

meshworkdir = $(MESHWORK_DIR)
meshwork_DATA = $(DIFFIEHELLMAN) $(GTKSPELLSHARP) $(STUN) $(MONOTORRENT) $(MACINTEGRATION) $(MACINTEGRATION_SHARP)
