BINDIR=$(top_builddir)/build

DIFFIEHELLMAN_DLL=DiffieHellman.dll
DIFFIEHELLMAN=$(BINDIR)/$(DIFFIEHELLMAN_DLL)

GTKSPELLSHARP_DLL=gtkspell-sharp.dll
GTKSPELLSHARP=$(BINDIR)/$(GTKSPELLSHARP_DLL)

MONOTORRENT_DLL=MonoTorrent.dll
MONOTORRENT=$(BINDIR)/$(MONOTORRENT_DLL)

MACINTEGRATION_DYLIB=libigemacintegration.dylib
MACINTEGRATION=$(BINDIR)/osx/$(MACINTEGRATION_DYLIB)

MACINTEGRATION_SHARP_DLL=ige-mac-integration-sharp.dll
MACINTEGRATION_SHARP=$(BINDIR)/$(MACINTEGRATION_SHARP_DLL)

GETOPTIONS_DLL=Mono.GetOptions.dll
GETOPTIONS=$(BINDIR)/$(GETOPTIONS_DLL)

all: $(DIFFIEHELLMAN) $(GTKSPELLSHARP) $(MONOTORRENT) $(MACINTEGRATION) $(MACINTEGRATION_SHARP) $(GETOPTIONS)

$(DIFFIEHELLMAN):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(DIFFIEHELLMAN_DLL) $(DIFFIEHELLMAN)

$(GTKSPELLSHARP):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(GTKSPELLSHARP_DLL) $(GTKSPELLSHARP)

$(MONOTORRENT):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(MONOTORRENT_DLL) $(MONOTORRENT)

$(MACINTEGRATION_SHARP):
	mkdir -p $(BINDIR)
	cp $(srcdir)/$(MACINTEGRATION_SHARP_DLL) $(MACINTEGRATION_SHARP)

$(MACINTEGRATION):
	mkdir -p $(BINDIR)/osx
	cp $(srcdir)/osx/$(MACINTEGRATION_DYLIB) $(MACINTEGRATION)

$(GETOPTIONS):
	mkdir -p $(BINDIR)
	cp $(srcdir)/dotnet/$(GETOPTIONS_DLL) $(GETOPTIONS)

CLEANFILES = $(DIFFIEHELLMAN) $(GTKSPELLSHARP) $(MONOTORRENT) $(MACINTEGRATION) $(MACINTEGRATION_SHARP) $(GETOPTIONS)
EXTRA_DIST = $(DIFFIEHELLMAN_DLL) $(GTKSPELLSHARP_DLL) $(MONOTORRENT_DLL) $(MACINTEGRATION_DYLIB) $(MACINTEGRATION_SHARP_DLL) $(GETOPTIONS_DLL)

meshworkdir = $(MESHWORK_DIR)
meshwork_DATA = $(DIFFIEHELLMAN) $(GTKSPELLSHARP) $(MONOTORRENT) $(MACINTEGRATION) $(MACINTEGRATION_SHARP) $(GETOPTIONS)
