
FILES = \
	glade/meshwork.glade		   		\
	ui/MainWindow.xml	 	   		\
	ui/TrayPopupMenu.xml	           		\
	images/attachment-col_16.png       		\
	images/firewall-small.png         		\
	images/meshwork.png                		\
	images/network1.png                		\
	images/tray_icon.png               		\
	images/avatar_generic.png          		\
	images/zoom.png                    		\
	images/star1_16.png				\
	images/arrow_down.png              		\
	images/arrow_up.png                		\
	images/stock_icons/info_24.png                  \
	images/stock_icons/audio-x-generic_16.png	\
	images/stock_icons/image-x-generic_16.png	\
	images/stock_icons/text-x-generic_16.png	\
	images/stock_icons/video-x-generic_16.png      	\
	images/stock_icons/x-office-document_16.png	\
	images/stock_icons/unknown_16.png    		\
	images/stock_icons/folder_16.png    		\
	images/stock_icons/connect_established_16.png 	\
	images/stock_icons/application-x-executable_16.png \
	images/stock_icons/system-search_16.png       	\
	images/stock_icons/computer_24.png             	\
	images/stock_icons/connect_24.png              	\
	images/stock_icons/stock_internet_16.png       	\
	images/stock_icons/stock_internet_24.png       	\
	images/stock_icons/stock_person_24.png         	\
	images/stock_icons/stock_person_16.png         	\
	images/stock_icons/stock-close_12.png          	\
	images/stock_icons/locked_16.png               	\
	images/stock_icons/down_22.png                 	\
	images/stock_icons/down_16.png                 	\
	images/stock_icons/left_22.png                 	\
	images/stock_icons/left_16.png                 	\
	images/stock_icons/right_22.png                	\
	images/stock_icons/right_16.png                	\
	images/stock_icons/up_16.png                   	\
	images/stock_icons/up_22.png	            	\
	images/stock_icons/add_16.png                  	\
	images/stock_icons/add_24.png                  	\
	images/stock_icons/remove_16.png                \
	images/stock_icons/remove_24.png                \
	images/stock_icons/stock_new-text_24.png	\
	images/stock_icons/internet-group-chat_16.png  	\
	images/stock_icons/internet-group-chat_24.png  	\
	images/stock_icons/mail_16.png                 	\
	images/stock_icons/find_24.png                 	\
	images/stock_icons/stock_refresh_16.png        	\
	images/stock_icons/stock_refresh_24.png

BUILD_FILES = $(addprefix $(srcdir)/, $(FILES))

EXTRA_DIST = $(FILES)
