BINDIR       = $(top_builddir)/build/
ASSEMBLY_DLL = FileFind.Meshwork.GtkClient.exe
ASSEMBLY     = $(BINDIR)/$(ASSEMBLY_DLL)

FILES =  \
	AssemblyInfo.cs \
	AvatarManager.cs \
	BuiltinActionGroup.cs \
	DispatchService.cs \
	DndUtils.cs \
	DrawingUtilities.cs \
	GtkHelper.cs \
	GtkMeshworkOptions.cs \
	Gui.cs \
	GuiSyncContext.cs \
	Menus/ChatMenu.cs \
	Menus/ChatPageMenu.cs \
	Menus/ConnectionMenu.cs \
	Menus/MemoMenu.cs \
	Menus/TransfersMenu.cs \
	Menus/UserMenu.cs \
	Pages/ChatRoomSubpage.cs \
	Pages/ChatsPage.cs \
	Pages/ChatSubpageBase.cs \
	Pages/ConnectionsPage.cs \
	Pages/IPage.cs \
	Pages/MemosPage.cs \
	Pages/NetworkOverviewPage.cs \
	Pages/NetworkOverviewPage.UserList.cs \
	Pages/NewSearchPage.cs \
	Pages/PrivateChatSubpage.cs \
	Pages/SearchResultsPage.cs \
	Pages/StatusLogPage.cs \
	Pages/TransfersPage.cs \
	Pages/UserBrowserPage.cs \
	RunOnMainThread.cs \
	Runtime.cs \
	Settings.cs \
	SidebarItems/ChatsItem.cs \
	SidebarItems/ConnectionsItem.cs \
	SidebarItems/FileSearchItem.cs \
	SidebarItems/ISidebarItem.cs \
	SidebarItems/MemosItem.cs \
	SidebarItems/NetworkOverviewItem.cs \
	SidebarItems/NewSearchItem.cs \
	SidebarItems/SeparatorItem.cs \
	SidebarItems/StatusItem.cs \
	SidebarItems/TransfersItem.cs \
	SidebarItems/UserBrowserItem.cs \
	SidebarItems/WhatsNewSearchItem.cs \
	SidebarItems/WhatsPopularSearchItem.cs \
	SyncContext.cs \
	TrayIcon.cs \
	Widgets/Actor.cs \
	Widgets/AnimatedImage.cs \
	Widgets/FadingAlignment.cs \
	Widgets/FileSearchEntry.cs \
	Widgets/FileSelector.cs \
	Widgets/FilterWidget.cs \
	Widgets/FolderDialog.cs \
	Widgets/GladeWidgetExtract.cs \
	Widgets/Header.cs \
	Widgets/HoverImageButton.cs \
	Widgets/MainSidebar.cs \
	Widgets/NavigationBar.cs \
	Widgets/NetworkGroupedTreeStore.cs \
	Widgets/SearchEntry.cs \
	Widgets/SingleActorStage.cs \
	Widgets/Stage.cs \
	Widgets/ZoomableCairoArea.cs \
	Widgets/ZoomableNetworkMap.cs \
	Windows/AboutDialog.cs \
	Windows/AcceptKeyDialog.cs \
	Windows/AddNetworkDialog.cs \
	Windows/AddTrustedNodeDialog.cs \
	Windows/BadOptionsDialog.cs \
	Windows/ChangeKeyPasswordDialog.cs \
	Windows/ChatRoomInvitationDialog.cs \
	Windows/ChatRoomPasswordDialog.cs \
	Windows/ConnectDialog.cs \
	Windows/DownloadPublicKeyDialog.cs \
	Windows/EditMemoDialog.cs \
	Windows/EditNetworkDialog.cs \
	Windows/FilePropertiesWindow.cs \
	Windows/FileTransferWindow.cs \
	Windows/GenerateKeyDialog.cs \
	Windows/GladeDialog.cs \
	Windows/GladeWindow.cs \
	Windows/IndexingStatusWindow.cs \
	Windows/InviteToChatDialog.cs \
	Windows/JoinChatroomDialog.cs \
	Windows/MainWindow.cs \
	Windows/MemoWindow.cs \
	Windows/PreferencesDialog.cs \
	Windows/SplashWindow.cs \
	Windows/StartupProblemsDialog.cs \
	Windows/UnlockKeyDialog.cs \
	Windows/UserInfoDialog.cs \
	Windows/winEditTrustedNode.cs

RESOURCES =  \
	../../resources/glade/meshwork.glade,FileFind.Meshwork.GtkClient.meshwork.glade \
	../../resources/images/arrow_down.png,FileFind.Meshwork.GtkClient.arrow_down.png \
	../../resources/images/arrow_up.png,FileFind.Meshwork.GtkClient.arrow_up.png \
	../../resources/images/attachment-col-small.png,FileFind.Meshwork.GtkClient.attachment-col-small.png \
	../../resources/images/avatar-generic-large.png,FileFind.Meshwork.GtkClient.avatar-generic-large.png \
	../../resources/images/avatar-generic-medium.png,FileFind.Meshwork.GtkClient.avatar-generic-medium.png \
	../../resources/images/avatar-generic-small.png,FileFind.Meshwork.GtkClient.avatar-generic-small.png \
	../../resources/images/firewall-small.png,FileFind.Meshwork.GtkClient.firewall-small.png \
	../../resources/images/install_header.bmp,FileFind.Meshwork.GtkClient.install_header.bmp \
	../../resources/images/install_side.bmp,FileFind.Meshwork.GtkClient.install_side.bmp \
	../../resources/images/meshwork.png,FileFind.Meshwork.GtkClient.meshwork.png \
	../../resources/images/network1.png,FileFind.Meshwork.GtkClient.network1.png \
	../../resources/images/smallclose.png,FileFind.Meshwork.GtkClient.smallclose.png \
	../../resources/images/star1_16.png,FileFind.Meshwork.GtkClient.star1_16.png \
	../../resources/images/stock_icons/application-exit_16.png,FileFind.Meshwork.GtkClient.application-exit_16.png \
	../../resources/images/stock_icons/application-exit_22.png,FileFind.Meshwork.GtkClient.application-exit_22.png \
	../../resources/images/stock_icons/application-exit_24.png,FileFind.Meshwork.GtkClient.application-exit_24.png \
	../../resources/images/stock_icons/application-exit_32.png,FileFind.Meshwork.GtkClient.application-exit_32.png \
	../../resources/images/stock_icons/application-x-executable_16.png,FileFind.Meshwork.GtkClient.application-x-executable_16.png \
	../../resources/images/stock_icons/audio-x-generic_16.png,FileFind.Meshwork.GtkClient.audio-x-generic_16.png \
	../../resources/images/stock_icons/computer_24.png,FileFind.Meshwork.GtkClient.computer_24.png \
	../../resources/images/stock_icons/connect_24.png,FileFind.Meshwork.GtkClient.connect_24.png \
	../../resources/images/stock_icons/connect_established_16.png,FileFind.Meshwork.GtkClient.connect_established_16.png \
	../../resources/images/stock_icons/dialog-information_24.png,FileFind.Meshwork.GtkClient.dialog-information_24.png \
	../../resources/images/stock_icons/dialog-password_16.png,FileFind.Meshwork.GtkClient.dialog-password_16.png \
	../../resources/images/stock_icons/dialog-password_22.png,FileFind.Meshwork.GtkClient.dialog-password_22.png \
	../../resources/images/stock_icons/dialog-password_24.png,FileFind.Meshwork.GtkClient.dialog-password_24.png \
	../../resources/images/stock_icons/dialog-password_32.png,FileFind.Meshwork.GtkClient.dialog-password_32.png \
	../../resources/images/stock_icons/dialog-warning_16.png,FileFind.Meshwork.GtkClient.dialog-warning_16.png \
	../../resources/images/stock_icons/down_16.png,FileFind.Meshwork.GtkClient.down_16.png \
	../../resources/images/stock_icons/down_22.png,FileFind.Meshwork.GtkClient.down_22.png \
	../../resources/images/stock_icons/find_16.png,FileFind.Meshwork.GtkClient.find_16.png \
	../../resources/images/stock_icons/find_24.png,FileFind.Meshwork.GtkClient.find_24.png \
	../../resources/images/stock_icons/folder_16.png,FileFind.Meshwork.GtkClient.folder_16.png \
	../../resources/images/stock_icons/folder_24.png,FileFind.Meshwork.GtkClient.folder_24.png \
	../../resources/images/stock_icons/go-down_16.png,FileFind.Meshwork.GtkClient.go-down_16.png \
	../../resources/images/stock_icons/go-down_22.png,FileFind.Meshwork.GtkClient.go-down_22.png \
	../../resources/images/stock_icons/go-home_16.png,FileFind.Meshwork.GtkClient.go-home_16.png \
	../../resources/images/stock_icons/go-home_24.png,FileFind.Meshwork.GtkClient.go-home_24.png \
	../../resources/images/stock_icons/go-next_16.png,FileFind.Meshwork.GtkClient.go-next_16.png \
	../../resources/images/stock_icons/go-next_22.png,FileFind.Meshwork.GtkClient.go-next_22.png \
	../../resources/images/stock_icons/go-previous_16.png,FileFind.Meshwork.GtkClient.go-previous_16.png \
	../../resources/images/stock_icons/go-previous_22.png,FileFind.Meshwork.GtkClient.go-previous_22.png \
	../../resources/images/stock_icons/go-up_16.png,FileFind.Meshwork.GtkClient.go-up_16.png \
	../../resources/images/stock_icons/go-up_22.png,FileFind.Meshwork.GtkClient.go-up_22.png \
	../../resources/images/stock_icons/gtk-new_16.png,FileFind.Meshwork.GtkClient.gtk-new_16.png \
	../../resources/images/stock_icons/gtk-new_24.png,FileFind.Meshwork.GtkClient.gtk-new_24.png \
	../../resources/images/stock_icons/gtk-preferences_16.png,FileFind.Meshwork.GtkClient.gtk-preferences_16.png \
	../../resources/images/stock_icons/gtk-preferences_22.png,FileFind.Meshwork.GtkClient.gtk-preferences_22.png \
	../../resources/images/stock_icons/gtk-preferences_24.png,FileFind.Meshwork.GtkClient.gtk-preferences_24.png \
	../../resources/images/stock_icons/image-x-generic_16.png,FileFind.Meshwork.GtkClient.image-x-generic_16.png \
	../../resources/images/stock_icons/info_24.png,FileFind.Meshwork.GtkClient.info_24.png \
	../../resources/images/stock_icons/internet-group-chat_16.png,FileFind.Meshwork.GtkClient.internet-group-chat_16.png \
	../../resources/images/stock_icons/internet-group-chat_24.png,FileFind.Meshwork.GtkClient.internet-group-chat_24.png \
	../../resources/images/stock_icons/list-add_16.png,FileFind.Meshwork.GtkClient.list-add_16.png \
	../../resources/images/stock_icons/list-add_22.png,FileFind.Meshwork.GtkClient.list-add_22.png \
	../../resources/images/stock_icons/list-add_24.png,FileFind.Meshwork.GtkClient.list-add_24.png \
	../../resources/images/stock_icons/list-remove_16.png,FileFind.Meshwork.GtkClient.list-remove_16.png \
	../../resources/images/stock_icons/list-remove_22.png,FileFind.Meshwork.GtkClient.list-remove_22.png \
	../../resources/images/stock_icons/list-remove_24.png,FileFind.Meshwork.GtkClient.list-remove_24.png \
	../../resources/images/stock_icons/locked_16.png,FileFind.Meshwork.GtkClient.locked_16.png \
	../../resources/images/stock_icons/mail_generic_16.png,FileFind.Meshwork.GtkClient.mail_generic_16.png \
	../../resources/images/stock_icons/mail-message-new_16.png,FileFind.Meshwork.GtkClient.mail-message-new_16.png \
	../../resources/images/stock_icons/mail-message-new_22.png,FileFind.Meshwork.GtkClient.mail-message-new_22.png \
	../../resources/images/stock_icons/mail-message-new_24.png,FileFind.Meshwork.GtkClient.mail-message-new_24.png \
	../../resources/images/stock_icons/mail-message-new_32.png,FileFind.Meshwork.GtkClient.mail-message-new_32.png \
	../../resources/images/stock_icons/network-transmit-receive_16.png,FileFind.Meshwork.GtkClient.network-transmit-receive_16.png \
	../../resources/images/stock_icons/stock_channel_16.png,FileFind.Meshwork.GtkClient.stock_channel_16.png \
	../../resources/images/stock_icons/stock_internet_16.png,FileFind.Meshwork.GtkClient.stock_internet_16.png \
	../../resources/images/stock_icons/stock_internet_24.png,FileFind.Meshwork.GtkClient.stock_internet_24.png \
	../../resources/images/stock_icons/stock_new-text_24.png,FileFind.Meshwork.GtkClient.stock_new-text_24.png \
	../../resources/images/stock_icons/stock_person_16.png,FileFind.Meshwork.GtkClient.stock_person_16.png \
	../../resources/images/stock_icons/stock_person_24.png,FileFind.Meshwork.GtkClient.stock_person_24.png \
	../../resources/images/stock_icons/stock_refresh_16.png,FileFind.Meshwork.GtkClient.stock_refresh_16.png \
	../../resources/images/stock_icons/stock_refresh_24.png,FileFind.Meshwork.GtkClient.stock_refresh_24.png \
	../../resources/images/stock_icons/system-search_16.png,FileFind.Meshwork.GtkClient.system-search_16.png \
	../../resources/images/stock_icons/system-search_24.png,FileFind.Meshwork.GtkClient.system-search_24.png \
	../../resources/images/stock_icons/text-x-generic_16.png,FileFind.Meshwork.GtkClient.text-x-generic_16.png \
	../../resources/images/stock_icons/unknown_16.png,FileFind.Meshwork.GtkClient.unknown_16.png \
	../../resources/images/stock_icons/up_16.png,FileFind.Meshwork.GtkClient.up_16.png \
	../../resources/images/stock_icons/up_22.png,FileFind.Meshwork.GtkClient.up_22.png \
	../../resources/images/stock_icons/user-home_16.png,FileFind.Meshwork.GtkClient.user-home_16.png \
	../../resources/images/stock_icons/video-x-generic_16.png,FileFind.Meshwork.GtkClient.video-x-generic_16.png \
	../../resources/images/stock_icons/view-refresh_16.png,FileFind.Meshwork.GtkClient.view-refresh_16.png \
	../../resources/images/stock_icons/x-office-document_16.png,FileFind.Meshwork.GtkClient.x-office-document_16.png \
	../../resources/images/tray_icon.png,FileFind.Meshwork.GtkClient.tray_icon.png \
	../../resources/images/zoom.png,FileFind.Meshwork.GtkClient.zoom.png \
	../../resources/ui/MainWindow.xml,FileFind.Meshwork.GtkClient.MainWindow.xml \
	../../resources/ui/MapPopupMenu.xml,FileFind.Meshwork.GtkClient.MapPopupMenu.xml \
	../../resources/ui/SearchPopupMenu.xml,FileFind.Meshwork.GtkClient.SearchPopupMenu.xml \
	../../resources/ui/TrayPopupMenu.xml,FileFind.Meshwork.GtkClient.TrayPopupMenu.xml
BUILD_RESOURCES = $(foreach res,$(RESOURCES), $(addprefix -resource:,$(res)))
RESOURCE_FILES = $(foreach res,$(RESOURCES), $(shell echo $(res) | sed s/,.*$\//))

REFERENCES = \
	-r:$(top_builddir)/build/FileFind.Meshwork.dll \
	-r:$(top_builddir)/build/gtkspell-sharp.dll \
	-r:$(top_builddir)/build/ige-mac-integration-sharp.dll \
	-r:$(top_builddir)/build/Mono.GetOptions.dll \
	-r:System.Drawing \
	-r:Mono.Posix \
	-r:Mono.Cairo \
	$(GTK_SHARP_LIBS) \
	$(GTKDOTNET_LIBS) \
	$(GLADE_SHARP_LIBS)

all: $(ASSEMBLY)

$(ASSEMBLY): $(FILES) $(RESOURCE_FILES)
	mkdir -p $(BINDIR)
	$(MCS) $(CSC_FLAGS) -unsafe -nowarn:0169 -debug -out:$@ -target:exe $(REFERENCES) $(FILES) \
	$(BUILD_RESOURCES)
	cp $(ASSEMBLY_DLL).config $(BINDIR)

run:
	$(MONO) --debug $(top_builddir)/build/FileFind.Meshwork.GtkClient.exe

CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
EXTRA_DIST = $(FILES) $(RESOURCE_FILES)
meshworkdir = $(MESHWORK_DIR)
meshwork_DATA = $(ASSEMBLY) $(ASSEMBLY).mdb $(ASSEMBLY_DLL).config
